--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <script src="paclevelgenerator.js" ></script>
+<script src="placeMobs.js" ></script>
+
 <link rel="stylesheet" href="pacmanStyle.css"/>
 <body onload="generatePacmanLevel()">
-<div id="navBar"><button onclick="generatePacmanLevel()">New Level</button></div>
+<div id="navBar"><button onclick="generatePacmanLevel()">New Level</button><button onclick="placeMobs()">place Mobs</button></div>
 <div id="paclevel">
 </div>
 
